--- a/index.html
+++ b/index.html
@@ -343,95 +343,7 @@
                     </div>
                 </div> -->
             </div>
-
-            <!-- submission guidelines -->
-            Submission Guidelines
-
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="session">
-                        <time>8:30AM</time>
-                        <h2>Doors Open</h2>
-                    </div>
-                    <!-- .session -->
-
-                    <div class="session">
-                        <time>9:30 - 9:40AM</time>
-                        <h2>Opening Remarks</h2>
-                        <h3>Fiona Kuhn <span>CO-FOUNDER & CEO, MES</span></h3>
-                    </div>
-                    <!-- .session -->
-
-                    <div class="session">
-                        <time>9:50 - 10:05AM</time>
-                        <h2>Focus on the story: how publishers and brands succeed on today's internet.</h2>
-                        <h3>Marie Jung <span>HEAD OF PARTNERSHIPS, MES</span></h3>
-                    </div>
-                    <!-- .session -->
-
-                    <div class="session">
-                        <time>10:10 - 10:35AM</time>
-                        <h2>Keynote Presentation</h2>
-                        <h3>Zoe Kühn <span>CO-FOUNDER & CEO,, BOOSTER</span></h3>
-                    </div>
-                    <!-- .session -->
-
-
-                </div>
-                <div class="col-md-4">
-                    <div class="session">
-                        <time>11:15 - 1:35PM</time>
-                        <h2>Brand Innovator Spotlight</h2>
-                        <h3>Tim Rams <span>DIRECTOR, CONTENT MARKETING, FIXS</span></h3>
-                        <h3>Daniel Fuchs <span>DIRECTOR OF MEDIA SERVICES, MENGO</span></h3>
-                        <h3>Hannah Keller <span>CO-FOUNDER, LOLO</span></h3>
-                    </div>
-                    <!-- .session -->
-
-                    <div class="session">
-                        <time>1:35 - 2:20PM</time>
-                        <h2>Fireside Chat: Making Native Work - An Agency Perspective</h2>
-                        <h3>Fiona Kuhn <span>CO-FOUNDER & CEO, MES</span></h3>
-                    </div>
-                    <!-- .session -->
-
-                    <div class="session">
-                        <time>2:20 - 3:20PM</time>
-                        <h2>Lunch Break</h2>
-                    </div>
-                    <!-- .session -->
-
-
-                </div>
-                <div class="col-md-4">
-                    <div class="session">
-                        <time>3:20PM - 4PM</time>
-                        <h2>Native Creatives Winners Presentation</h2>
-                        <h3>Johann Graf <span>VP Sales, MES</span></h3>
-                    </div>
-                    <!-- .session -->
-
-                    <div class="session">
-                        <time>4:05 - 5:30PM</time>
-                        <h2>Case Study: XYR</h2>
-                        <h3>Jan Pfeiffer <span>HEAD OF COMMUNICATIONS, TOT</span></h3>
-                        <h3>Marie Ilsner <span>PRESIDENT, PADDA</span></h3>
-                        <h3>Hannes Beck <span>MANAGING DIRECTOR, DEP</span></h3>
-                    </div>
-                    <!-- .session -->
-
-
-                    <div class="session">
-                        <time>5:30 - 6:00PM</time>
-                        <h2>Cocktail and Networking Party</h2>
-                    </div>
-                    <!-- .session -->
-
-
-                </div>
-            </div>
         </div>
-
     </section>
 
 
@@ -548,93 +460,129 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <h1>CONTENT</h1>
+                        <h1>Submission Guidelines</h1>
                         <p>
-                            The conference will be operated with two tracks; the Smart Computing track and the Industrial and Systems Engineering track. The conference solicits papers addressing original research from the following areas.
+                            Guidelines for Camera Copy of Extended Abstracts 
                         </p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="session">
-                        <time>8:30AM</time>
-                        <h2>Doors Open</h2>
+                        <time>Manuscript Layout</time>
+                        <h3>Paper format – Standard B5 (7.17” × 10.12”)</h3>
+                        <h3>Maximum length of paper is four (4) pages</h3>
+                        <h3>Margins – Left 1 1/2”, Right 1”, Top 0.5”, Bottom 0.5”</h3>
+                        <h3>Header:
+                            <span>
+                                International Research Conference on Smart Computing and Systems Engineering - 2018
+                            </span>
+                            <span>
+                                Department of Industrial Management, Faculty of Science, University of Kelaniya, Sri Lanka
+                            </span>    
+                        </h3>
                     </div>
                     <!-- .session -->
 
                     <div class="session">
-                        <time>9:30 - 9:40AM</time>
-                        <h2>Opening Remarks</h2>
-                        <h3>Fiona Kuhn <span>CO-FOUNDER & CEO, MES</span></h3>
+                        <time>Abstract Title</time>
+                        <h3><b>Bold</b>, with maximum of 2 lines, 11 point, Times New Roman, center aligned, only first letter of the title is UPPER CASE (except where it is a proper noun)</h3>
                     </div>
                     <!-- .session -->
 
                     <div class="session">
-                        <time>9:50 - 10:05AM</time>
-                        <h2>Focus on the story: how publishers and brands succeed on today's internet.</h2>
-                        <h3>Marie Jung <span>HEAD OF PARTNERSHIPS, MES</span></h3>
+                        <time>Authors</time>
+                        <h3>Name(s) of Author(s)</h3>
+                        <h3>Affiliation(s) of Authors in italics – If affiliations are different, they should be indicated by superscripted Arabic numerals</h3>
+                        <h3>The corresponding author should be indicated by using an asterisk (*)</h3>
+                        <h3>The e-mail address of the corresponding author should be given in a new line after the names in <i>italics</i></h3>
                     </div>
                     <!-- .session -->
-
-                    <div class="session">
-                        <time>10:10 - 10:35AM</time>
-                        <h2>Keynote Presentation</h2>
-                        <h3>Zoe Kühn <span>CO-FOUNDER & CEO,, BOOSTER</span></h3>
-                    </div>
-                    <!-- .session -->
-
 
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="session">
-                        <time>11:15 - 1:35PM</time>
-                        <h2>Brand Innovator Spotlight</h2>
-                        <h3>Tim Rams <span>DIRECTOR, CONTENT MARKETING, FIXS</span></h3>
-                        <h3>Daniel Fuchs <span>DIRECTOR OF MEDIA SERVICES, MENGO</span></h3>
-                        <h3>Hannah Keller <span>CO-FOUNDER, LOLO</span></h3>
+                        <time>Abstract</time>
+                        <h3>Provide up to a maximum of five keywords Only the word “<b>Keyword:</b>” should be bold</h3>
                     </div>
                     <!-- .session -->
 
                     <div class="session">
-                        <time>1:35 - 2:20PM</time>
-                        <h2>Fireside Chat: Making Native Work - An Agency Perspective</h2>
-                        <h3>Fiona Kuhn <span>CO-FOUNDER & CEO, MES</span></h3>
+                        <time>Abstract Body</time>
+                        <h3>Text – Should be typed using 10 points, Times New Roman with single spacing</h3>
+                        <h3>Diagram(s) or table(s) can be included and should be marked in ascending Arabic numerals</h3>
+                        <h3>Paragraphs – Justified, No indentation</h3>
+                        <h3>All non – English and technical terms – either underlined or typed in italics
+                            <span>
+                                (Eg. et al., viz., etc., Yala)
+                            </span>  
+                        </h3>
+                        <h3>All units should be presented as recommended by the System International (SI) Standard Units</h3>
+                        <h3>Technical terms, symbols etc. should be presented according to appropriate standards</h3>
+                        <h3>Abbreviations should be defined at the first time it appears</h3>
                     </div>
                     <!-- .session -->
-
-                    <div class="session">
-                        <time>2:20 - 3:20PM</time>
-                        <h2>Lunch Break</h2>
-                    </div>
-                    <!-- .session -->
-
 
                 </div>
-                <div class="col-md-4">
+            </div>
+
+            <!-- Presentation Guidelines -->
+            <div class="row">
+                <center><p>The following format is provided as a guideline to present your work.</p></center>
+
+                <div class="col-md-6">
                     <div class="session">
-                        <time>3:20PM - 4PM</time>
-                        <h2>Native Creatives Winners Presentation</h2>
-                        <h3>Johann Graf <span>VP Sales, MES</span></h3>
+                        <time>Introduction</time>
+                        <h3>
+                            <span>
+                                Shall start immediately after the Abstract, as the next paragraph. This section should provide a brief overview of the problem and the context of the study and should lead the reader to the importance of the study; tie-up published literature with the aims of the study and clearly states the rationale behind the investigation
+                            </span>  
+                        </h3>
                     </div>
                     <!-- .session -->
 
                     <div class="session">
-                        <time>4:05 - 5:30PM</time>
-                        <h2>Case Study: XYR</h2>
-                        <h3>Jan Pfeiffer <span>HEAD OF COMMUNICATIONS, TOT</span></h3>
-                        <h3>Marie Ilsner <span>PRESIDENT, PADDA</span></h3>
-                        <h3>Hannes Beck <span>MANAGING DIRECTOR, DEP</span></h3>
+                        <time>Methodology</time>
+                        <h3>
+                            <span>
+                                The conceptual framework and the methodology followed will be presented. If the framework is based on previous work or changes done to an existing framework, this should be clearly set out and explained. Trivial details may be avoided. New methods or substantially modified methods may be described in sufficient detail. The statistical method and the level of significance chosen shall be clearly stated
+                            </span>  
+                        </h3>
                     </div>
                     <!-- .session -->
-
 
                     <div class="session">
-                        <time>5:30 - 6:00PM</time>
-                        <h2>Cocktail and Networking Party</h2>
+                        <time>Results</time>
+                        <h3>
+                            <span>
+                                All findings presented in tabular or graphical form shall be described in this section. The data should be statistically analyzed and the level of significance stated. Data that is not statistically significant need only to be mentioned in the text – no illustration is necessary. All Tables and figures must have a title or caption and a legend to make them self-explanatory
+                            </span>  
+                        </h3>
                     </div>
                     <!-- .session -->
 
+                </div>
+                <div class="col-md-6">
+                    <div class="session">
+                        <time>Conclusion</time>
+                        <h3>
+                            <span>
+                                This section deals with the interpretation of results, and helps to answer the research question(s) that were posed initially. The explanation should help to convey how the study help to increase current understanding of the problem and should be logical. Unsupported hypothesis should be avoided. The discussion should state where the results could be used and in what context where applicable. It could also mention unexpected possibilities the results uncovered and areas that could be further explored
+                            </span>  
+                        </h3>
+                    </div>
+                    <!-- .session -->
+
+                    <div class="session">
+                        <time>References</time>
+                        <h3>
+                            <span>
+                                Reference should be used very selectively given the restriction on number of pages. Use standard APA referencing style
+                            </span>  
+                        </h3>
+                    </div>
+                    <!-- .session -->
 
                 </div>
             </div>
