--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo.png" alt=""></a>
+                    <!-- <a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo.png" alt=""></a> -->
+                    <a class="navbar-brand page-scroll" href="#page-top">IRCSCSE</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -55,11 +56,11 @@
                         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                         <li class="hidden"><a href="#page-top"></a></li>
                         <li><a class="page-scroll" href="#section-intro">About</a></li>
-                        <li><a class="page-scroll" href="#section-speaker">Speakers</a></li>
+                        <li><a class="page-scroll" href="#section-speaker">Committee</a></li>
                         <li><a class="page-scroll" href="#section-ajenda">Content</a></li>
                         <li><a class="page-scroll" href="#section-pricing">Buy Ticket</a></li>
-                        <li><a class="page-scroll" href="#section-partner">Partners</a></li>
-                        <li><a class="page-scroll" href="#section-venue">Venue</a></li>
+                        <li><a id="navbarSubmission" class="page-scroll" href="#submission-guidelines">Submission</a></li>
+                        <li><a class="page-scroll" href="#section-venue">Contact</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -76,7 +77,7 @@
             <div class="event-date">MARCH 29, 2018, COLOMBO</div>
             <h1>International Research Conference on Smart Computing and Systems Engineering</h1>
             <p class="lead">Department of Industrial Management | Faculty of Science | University of Kelaniya</p>
-            <button type="button" class="btn btn-default btn-lg">SUBMISSION GUIDELINES</button>
+            <button type="button" class="btn btn-default btn-lg" onclick="navbarSubmission.click()">SUBMIT</button>
         </div>
     </div>
     <!-- .Jumbotron-->
@@ -126,17 +127,17 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <h1>SPEAKERS</h1>
+                        <h1>PROGRAMME COMMITTEE</h1>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-1.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/ProfTakaoTerano.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Tom Hoffmann
-                                <small>Cintas</small>
+                            <h3>Professor Takao Terano
+                                <small>Tokyo Institute of Technology, Japan</small>
                             </h3>
                             <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -151,10 +152,10 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-2.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/ProfRichardLai.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Zoe Krämer
-                                <small>Earthlink</small>
+                            <h3>Professor Richard Lai
+                                <small>La Trobe University, Australia</small>
                             </h3>
                             <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -169,10 +170,10 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-3.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/ProfPubuduPathirana.png" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Helena Kühn
-                                <small>Herman</small>
+                            <h3>Professor Pubudu Pathirana
+                                <small>Deakin University, Australia</small>
                             </h3>
                             <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -187,10 +188,10 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-4.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/ProfKoliyaPulasinghe.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Leon Werner
-                                <small>Level</small>
+                            <h3>Professor Koliya Pulasinghe
+                                <small>Sri Lanka Institute of Information Technology, Sri Lanka</small>
                             </h3>
                             <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -209,10 +210,10 @@
             <div class="row">
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-5.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/DrDonGalagedara.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Alexander Ziegler
-                                <small>A.G. Edwards</small>
+                            <h3>Dr. Don Galagedara
+                                <small>Monash University, Australia</small>
                             </h3>
                             <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -227,10 +228,10 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-6.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/ProfSRDKalingamudali.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Benedikt
-                                <small>Fitch Co.</small>
+                            <h3>Professor S R D Kalingamudali
+                                <small>University of Kelaniya, Sri Lanka</small>
                             </h3>
                             <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -245,10 +246,10 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-7.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/DrSachinthaPitigala.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Lara Hahn
-                                <small>Acterna</small>
+                            <h3>Dr. Sachintha Pitigala
+                                <small>University of Kelaniya, Sri Lanka</small>
                             </h3>
                             <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -263,10 +264,10 @@
 
                 <div class="col-sm-6 col-md-3">
                     <figure class="thumbnail">
-                        <a href="#"><img src="img/img-team-8.jpg" class="img-responsive" alt="Image"></a>
+                        <a href="#"><img src="img/DrLochandakaRanatunge.jpg" class="img-responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>Elias Friedrichs
-                                <small>Adolph</small>
+                            <h3>Dr. Lochandaka Ranatunge
+                                <small>University of Moratuwa, Sri Lanka</small>
                             </h3>
                             <ul class="social-links">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -455,12 +456,12 @@
     </section> -->
 
     <!-- Submission Guidelines -->
-    <section id="section-ajenda" class="section-wrapper section-ajenda">
+    <section id="submission-guidelines" class="section-wrapper section-ajenda">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <h1>Submission Guidelines</h1>
+                        <h1>SUBMISSION GUIDELINES</h1>
                         <p>
                             Guidelines for Camera Copy of Extended Abstracts 
                         </p>
@@ -593,12 +594,30 @@
 
     <section id="section-venue" class="section-wrapper  gray-bg">
         <div class="container">
+            <h1>DEPARTMENT OF INDUSTRIAL MANAGEMENT</h1>
             <div class="row">
-                <div class="col-md-12">
-                    <div class="section-title">
-                        <h1>THE VENUE</h1>
 
-                        <p>Credibly recaptiualize cutting-edge functionalities vis-a-vis intuitive growth strategies. Appropriately evolve open-source potentialities via goal-oriented e-business. Enthusiastically target go forward scenarios and visionary "outside the box" thinking. Professionally administrate cost effective sources without corporate convergence.</p>
+                <div class="col-sm-5">
+                    <p>IRCSCSE</p>
+                    <p>
+                        Department of Industrial Management<br>
+                        Faculty of Science<br>
+                        Universiry of Kelaniya<br>
+                        Dalugame, Kelaniya.<br>
+                    </p>
+                    <p><span class="glyphicon glyphicon-phone-alt"></span> +94(0)11 2903282-5 / +94(0)11 2914482 </p>
+                    <p><span class="glyphicon glyphicon-print"></span> +94(0)11 2903281 </p>
+                    <p><span class="glyphicon glyphicon-envelope"></span> im@kln.ac.lk </p>
+                </div>
+                <!-- <div class="col-md-12"> -->
+                <div class="col-sm-7"></div>
+                    <div class="section-title">
+                        
+                        <p>
+                            Centre of Excellence in Management and Information Technology<br>
+                            
+                            Combining the fields of Management and Information Technology, the Department of Industrial Management meets the demands of global corporates. Its reputation for challenging the frontiers of knowledge with the support of an outstanding mix of academic faculty and world class facilities makes it an exciting, stimulating and fun place to learn and develop to your full potential in order to launch a successful professional career.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -612,19 +631,29 @@
             <!-- .row-->
 
             <div class="row">
-                <div class="col-md-12">
+                <!-- <div class="col-md-12"> -->
                     <div class="section-title">
-                        <h2>STAY INFORMED</h2>
-                        <p>Don't miss the event!</p>
+                        <!-- <div class="row"> -->
+                            <div class="col-sm-6">
+                                <figure>
+                                    <img src="img/dimlogo50.png" style="width: 100px;">
+                                    <figcaption>Department of Industrial Management</figcaption>
+                                </figure>
+                            </div>
+                            <div class="col-sm-6">
+                                <img src="img/uoklogo.png" style="width: 100px;"><br>
+                                    <figcaption>University of Kelaniya</figcaption>
+                            </div>
+                        <!-- </div> -->
                     </div>
-                    <form id="contactForm" class="subscribe-form form-inline" action="sendemail.php" method="POST">
+                    <!-- <form id="contactForm" class="subscribe-form form-inline" action="sendemail.php" method="POST">
                         <div class="form-group">
                             <label for="emailTwo" class="sr-only">Email</label>
                             <input type="email" class="form-control input-lg" required="" id="emailTwo" name="email" placeholder="Enter your email address">
                         </div>
                         <button type="submit" class="btn btn-primary btn-lg">SUBSCRIBE</button>
-                    </form>
-                </div>
+                    </form> -->
+                <!-- </div> -->
             </div>
 
         </div>
@@ -636,7 +665,8 @@
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
-                    <div class="copytext text-center">&copy; Conference. All rights reserved | Design By: <a href="https://uicookies.com">uiCookies</a></div>
+                    <!-- <div class="copytext text-center">&copy; IRCSCSE. All rights reserved | Design By: <a href="https://uicookies.com">uiCookies</a></div> -->
+                    <div class="copytext text-center">&copy; IRCSCSE. All rights reserved</div>
                 </div>
             </div>
             <!-- .container -->
@@ -659,7 +689,7 @@
 <script src="js/jquery.easing.min.js"></script>
 
 <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-<script src="https://maps.googleapis.com/maps/api/js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh90lAh54IUYcknqji1Epdshk3JDU2NqU"></script>
 
 <!--<script src="js/one-page-nav.js"></script>-->
 <script src="js/scripts.js"></script>
