Modified Buy Ticket section
Added description to Buy Ticket section with phone number and email.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <li><a class="page-scroll" href="#section-intro">About</a></li>
                         <li><a class="page-scroll" href="#section-speaker">Committee</a></li>
                         <li><a class="page-scroll" href="#section-ajenda">Content</a></li>
-                        <li><a class="page-scroll" href="#section-pricing">Buy Ticket</a></li>
+                        <li><a class="page-scroll" href="#section-pricing">Ticket</a></li>
                         <li><a id="navbarSubmission" class="page-scroll" href="#submission-guidelines">Submission</a></li>
                         <li><a class="page-scroll" href="#section-venue">Contact</a></li>
                     </ul>
@@ -354,7 +354,7 @@
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>BUY TICKET</h1>
-                        <p>Quickly synthesize low-risk high-yield e-markets without dynamic.</p>
+                        <p>Call +94(0)11 2903282-5 or email to im@kln.ac.lk </p>
                     </div>
                 </div>
             </div>
