Modified Copyright info
Added DIM name and link to website to copyright info.

--- a/index.html
+++ b/index.html
@@ -665,8 +665,8 @@
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
-                    <!-- <div class="copytext text-center">&copy; IRCSCSE. All rights reserved | Design By: <a href="https://uicookies.com">uiCookies</a></div> -->
-                    <div class="copytext text-center">&copy; IRCSCSE. All rights reserved</div>
+                    <div class="copytext text-center">&copy; IRCSCSE. All rights reserved | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
+                    <!-- <div class="copytext text-center">&copy; IRCSCSE. All rights reserved</div> -->
                 </div>
             </div>
             <!-- .container -->
