Modifioed About section
Removed department address

--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <address>
+                    <!-- <address>
                         <strong>Department of Industrial Management</strong><br>
                         Faculty of Science<br>
                         University of Kelaniya<br>
                         Dalugama, kelaniya<br>
                         <abbr title="Phone">Phone:</abbr> +94(0)11 290-3282<br>
                         <abbr title="Email">Email:</abbr> im@kln.ac.lk
-                    </address>
+                    </address> -->
                     <p>
                         <strong>Important Dates</strong><br>
                         Submission of abstracts<br>
