Added IRCSCSE Logo
Added image to Navbar and Copyright info.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <!-- <a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo.png" alt=""></a> -->
-                    <a class="navbar-brand page-scroll" href="#page-top">IRCSCSE</a>
+                    <a class="navbar-brand page-scroll" href="#page-top"><p><img src="img/conlogo6.png" style="height: 40px;">IRCSCSE</p></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -665,7 +665,7 @@
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
-                    <div class="copytext text-center">&copy; IRCSCSE. All rights reserved | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
+                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; IRCSCSE. All rights reserved | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
                     <!-- <div class="copytext text-center">&copy; IRCSCSE. All rights reserved</div> -->
                 </div>
             </div>
