Bug Fix - Contact
Corrected Paragraph no left and right border issue.

--- a/index.html
+++ b/index.html
@@ -606,8 +606,8 @@
                 <div class="col-md-12">
                     <div class="section-title">
                         <h1>DEPARTMENT OF INDUSTRIAL MANAGEMENT</h1>
-                        <div class="row">
-                            <div class="col-sm-6">
+<!--                         <div class="row"> -->
+                            <div class="col-md-6">
                                 <p class="ircscseTextJustify">
                                     <br>
                                     Department of Industrial Management<br>
@@ -621,7 +621,7 @@
                                 </p>
                             </div>
                             <!-- <div class="col-md-12"> -->
-                            <div class="col-sm-6"></div>
+                            <div class="col-md-6"></div>
                                     <p class="ircscseTextJustify">
                                         <br>
                                         Centre of Excellence in Management and Information Technology<br>
@@ -629,7 +629,7 @@
                                         Combining the fields of Management and Information Technology, the Department of Industrial Management meets the demands of global corporates. Its reputation for challenging the frontiers of knowledge with the support of an outstanding mix of academic faculty and world class facilities makes it an exciting, stimulating and fun place to learn and develop to your full potential in order to launch a successful professional career.
                                     </p>
                             </div>
-                        </div>
+                        <!-- </div> -->
                     </div>
                 </div>
             </div>
